Updated libraries Update Lein.sh Updated Readme to handle Java 9